--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'net.minecraftforge.gradle' version '5.1.+'
 }
 
-version = '0.0.1-1.19.2'
+version = '0.0.2-1.19.2'
 group = 'rasmoos.semirealisticelectricity' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
 archivesBaseName = 'semirealisticelectricity'
 
@@ -123,13 +123,23 @@ repositories {
     // flatDir {
     //     dir 'libs'
     // }
+
+    maven {
+        url "https://cursemaven.com"
+        content {
+            includeGroup "curse.maven"
+        }
+    }
 }
 
 dependencies {
     // Specify the version of Minecraft to use. If this is any group other than 'net.minecraft', it is assumed
     // that the dep is a ForgeGradle 'patcher' dependency, and its patches will be applied.
     // The userdev artifact is a special name and will get all sorts of transformations applied to it.
-    minecraft 'net.minecraftforge:forge:1.19.2-43.0.2'
+    minecraft 'net.minecraftforge:forge:1.19.2-43.0.11'
+
+    implementation fg.deobf('curse.maven:jei-238222:3928388')
+    implementation fg.deobf('curse.maven:theoneprobe-245211:3927520')
 
     // Real mod deobf dependency examples - these get remapped to your current mappings
     // compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
